# vision

./: .gitignore  .hubignore  HANDOFF_NOTES.md  README.md  UAIP.pages
projects/EventRelay/: .cursorignore  .dockerignore  .env.example  .gcloudignore  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.production  Dockerfile.youtube-packager  Makefile  README.md  SECURITY.md  cloudbuild.frontend.yaml  docker-compose.full.yml  package.json  pyproject.toml  requirements-packager.txt  requirements.txt  turbo.json  vercel.json
projects/EventRelay/.claude/: claude_instructions.md  commands
projects/EventRelay/.cursor/rules/: must read as resource   rule1.mdc
projects/EventRelay/.devcontainer/: devcontainer.json
projects/EventRelay/.github/: IMPLEMENTATION_SUMMARY.md  QUICKREF.md  README.md  RESOURCE_EVALUATION.md  copilot-instructions.md  mcp-servers.json
projects/EventRelay/.github/ISSUE_TEMPLATE/: README.md  create-production-issues.sh  phase-1-security-environment.md  phase-2-monitoring-cicd.md  phase-3-testing-launch.md
projects/EventRelay/.github/agents/: README.md  frontend.agent.md  git-ops.agent.md  mcp.agent.md  python-backend.agent.md  testing.agent.md  video-processing.agent.md
projects/EventRelay/.github/codeql/: codeql-config.yml
projects/EventRelay/.github/workflows/: README.md  ci.yml  coverage.yml  deploy-cloud-run.yml  security.yml
projects/EventRelay/.turbo/cache/: 0b6438367efabd6d-meta.json  1808c53a306f267b-meta.json  1808c53a306f267b.tar.zst  1e666ecb004c7aa6-meta.json  1e666ecb004c7aa6.tar.zst  3d7c7bc5ce921e2b-meta.json  3d7c7bc5ce921e2b.tar.zst  623e3abb5d0451bc.tar.zst  6968707a9690f21c-meta.json  8d49934ea9cede35-meta.json  8d49934ea9cede35.tar.zst  ba4375dbba8f8912.tar.zst  cd5d8686efd5cf94-meta.json  cd5d8686efd5cf94.tar.zst  cdddf11597e0dbc7-meta.json  cdddf11597e0dbc7.tar.zst  f2102c8891d63bbc-meta.json  f2102c8891d63bbc.tar.zst
projects/EventRelay/ai-edge-torch/: pyvenv.cfg
projects/EventRelay/apps/web/: README.md  package.json
projects/EventRelay/backend/firebase/: .gitlab-ci.yml  package-lock.json  package.json
projects/EventRelay/backend/services/: api_cost_monitor.py
projects/EventRelay/config/: CREDENTIALS_REPORT.json  DUPLICATION_REPORT.json  Taskfile.yml  VERIFICATION_REPORT.json  alembic.ini  browser_compatibility.json  bulk_processing_results_20250830_011143.json  bulk_processing_results_20250830_011338.json  docker-compose.yml  fly.toml  import_mapping.json  llama_agent_config.json  mcp_config_optimized.json  package.json  phase5_integration_report.json  pytest.ini
projects/EventRelay/config/cursor-expert/: ai-behavior-config.json  backup_api_config.json  settings-user.json  settings-workspace.json
projects/EventRelay/config/project_templates/: README.md  TEMPLATE_MASTER_INDEX.md
projects/EventRelay/config/requirements_backups/: requirements.2025-08-17T092809.txt
projects/EventRelay/config/templates/: env_template.txt  secure_env_template.txt
projects/EventRelay/connectors/: mcp_base.py
projects/EventRelay/cursor-styled-docs/: cursor_video_example.py  script.js  serve.py  styles.css  test.html
projects/EventRelay/database/: query_optimization.sql
projects/EventRelay/deployment/: activate_project.sh  main.py
projects/EventRelay/deployment/automation/: PR_SUMMARY_auto_issues.md  create_pr.sh
projects/EventRelay/deployment/solution_assembly/: __init__.py  integration.py
projects/EventRelay/desktop-overlay/: package-lock.json
projects/EventRelay/docs/: AGENT_SELF_CREATION.md  AGENT_SELF_CREATION_ARCHITECTURE.md  AUTOMATION_EXECUTION_GUIDE.md  CLOUD_AI_INTEGRATION.md  CLOUD_RUN_IMPLEMENTATION.md  CLOUD_RUN_QUICKSTART.md  CODEQL_CONFIGURATION.md  COVERAGE_QUICKREF.md  COVERAGE_SETUP.md  DEPLOYMENT_FAILURE_ANALYSIS.md  DEPLOYMENT_README.md  ENV_MANAGEMENT_IMPLEMENTATION.md  FRONTEND_BACKEND_INTEGRATION_PLAN.md  LLAMA_BACKGROUND_AGENT_README.md  MCP_YOUTUBE_PROXY_STATUS_REPORT.md  PERFORMANCE_QUICK_REFERENCE.md  PERFORMANCE_README.md  QUICK_START_API_KEYS.md  README.md  REFACTORING_PLAN.md  UI_UX_HYBRID_MODEL_PLAN.md  VIDEO_ID_CONFIGURATION.md  VIDEO_PROCESSING_VALIDATION_REPORT.md  enterprise_mcp_integration.md  hybrid_gemini_baseline.md  ops_funnel_factory_gpt_→_agent.md  utube.html  uvai-consolidation-plan.md
projects/EventRelay/docs/analysis/: ARCHITECTURE_ANALYSIS.md  CODE_QUALITY_REPORT.md  EXECUTIVE_SUMMARY.md  REMEDIATION_PLAN.md  SECURITY_REPORT.md  (+5 more)
projects/EventRelay/examples/: agent_self_creation_demo.py  analyze_video.py  basic_usage.py  debug_agent_orchestrator.py  demo_app.py  final_verification.py  firecrawl_integration.py  grok_cli.py  minimal_deep_mcp_agent.py
projects/EventRelay/frontend/: Dockerfile  ai-tooltip.tsx  package.json  tailwind.config.js  vercel.json  yt_sw.js
projects/EventRelay/scripts/: AUTOMATION_LAUNCHER.sh  analyze_performance.py  automated_dependency_monitor.sh  chart_script.py  check_credentials.py  claude_code_watcher.py  cleanup_cron_setup.sh  cleanup_docs.sh  cleanup_repository.py  continuous_runner.py  create_import_map.py  demo_canary.py  deploy-cloud-run.sh  deploy-fly.sh  deploy_all.py  deploy_core_integration.py  deploy_production.py  diagnose_github_issues.py  duplicate_scan.py  enhanced_continuous_runner.py  env_constants.py  final_github_fix_summary.py  fix_syspath_issues.py  fix_workflow_bottlenecks.py  gap_fixing_workflow.py  grok_cli.sh  manage_custom_agents.py  monitor_env.py  monitoring_dashboard.py  phase1_import_analyzer.py  phase4_external_dependencies_test.py  phase5_integration_test.py  post_claude_validation.sh  production_deployment.py  runviewscriptios.py  say_summary.py  scheduled_cleanup.py  script.py  security_personas_test.py  server.py  (+34 more)
projects/EventRelay/src/: canary_router.py  feature_flags.py  mcp-bridge.py  model_router.py  youtube-innovation-server.py
projects/EventRelay/storage/: skills_database.json
projects/EventRelay/tools/: final_bulk_processor.py  langextract_cli.py  mcp_file_migration.py
projects/EventRelay/utilities/: quick_test.py  quick_video_test.py  simple_test.py  youtube_packager_service.py
(+1216 files in other folders)
