[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-mcp-demo"
version = "0.1.0"
description = "GitHub MCP Demo for Stream Agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "vision-agents",
    "python-dotenv>=1.1.1",
    "vision-agents-plugins-deepgram",
    "vision-agents-plugins-elevenlabs",
    "vision-agents-plugins-silero",
    "vision-agents-plugins-getstream",
    "vision-agents-plugins-openai",
    "vision-agents-plugins-gemini",
]

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]

[tool.uv.sources]
"vision-agents" = {path = "../../../agents-core", editable=true}
"vision-agents-plugins-deepgram" = {path = "../../../plugins/deepgram", editable=true}
"vision-agents-plugins-elevenlabs" = {path = "../../../plugins/elevenlabs", editable=true}
"vision-agents-plugins-getstream" = {path = "../../../plugins/getstream", editable=true}
"vision-agents-plugins-openai" = {path = "../../../plugins/openai", editable=true}
"vision-agents-plugins-gemini" = {path = "../../../plugins/gemini", editable=true}
