[project]
name = "openai-sts-example"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "vision-agents",
    "vision-agents-plugins-openai",
    "vision-agents-plugins-getstream",
    "python-dotenv",
    "asyncio",
    "aiortc",
    "openai",
]

[tool.uv.sources]
"vision-agents-plugins-openai" = {path = "../../../plugins/openai", editable=true}
"vision-agents-plugins-getstream" = {path = "../../../plugins/getstream", editable=true}
"vision-agents" = {path = "../../../agents-core", editable=true}
