[project]
name = "mcp-example"
version = "0.1.0"
description = "Example using MCP-powered agent with STT and TTS"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "getstream-plugins-deepgram>=0.1.1",
    "getstream-plugins-elevenlabs>=0.1.0",
    "python-dotenv>=1.1.1",
]

[tool.uv.sources]
getstream-plugins-deepgram = { path = "../../../../plugins/deepgram", editable = true }
getstream-plugins-elevenlabs = { path = "../../../../plugins/elevenlabs", editable = true }
