[project]
name = "tts-elevenlabs-example"
version = "0.1.0"
description = "Stream Video + ElevenLabs TTS demo."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "vision-agents",
    "vision-agents-plugins-elevenlabs>=0.1.0",
    "vision-agents-plugins-getstream>=0.1.0",
    "vision-agents-plugins-openai>=0.1.0",
    "python-dotenv>=1.1.1",
]

[tool.uv.sources]
vision-agents = { path = "../../../../agents-core", editable = true }
vision-agents-plugins-elevenlabs = { path = "../../../../plugins/elevenlabs", editable = true }
vision-agents-plugins-getstream = { path = "../../../../plugins/getstream", editable = true }
vision-agents-plugins-openai = { path = "../../../../plugins/openai", editable = true }
