[project]
name = "tts-kokoro-example"
version = "0.1.0"
description = "Stream Video + Kokoro TTS demo."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "getstream-plugins-kokoro>=0.1.0",
    "python-dotenv>=1.1.1",
]

[tool.uv.sources]
getstream-plugins-kokoro = { path = "../../../../plugins/kokoro", editable = true }
